# Szachy-silnik

./: .gitignore  CMakeLists.txt  Dockerfile  EnPassant.txt  Issue.txt  LICENSE  README.md  board.cpp  board.h  build.sh  chess_cli  docker-compose.yml  entrypoint.sh  env.example  health_check.py  main.cpp  move.cpp  test_chess_rules  test_chess_rules.cpp  test_chess_rules_final  test_chess_rules_final.cpp  test_chess_rules_fixed  test_chess_rules_fixed.cpp
.github/workflows/: ci.yml
include/chess/ai/: ChessAI.h  Evaluator.h  TranspositionTable.h  ZobristHash.h
include/chess/board/: Board.h
include/chess/game/: GameState.h
include/chess/mqtt/: logging.h  mqtt_client.h  payloads.h  topics.h
include/chess/rules/: Attack.h  Castling.h  MoveExec.h  MoveGenerator.h  MoveValid.h
include/chess/utils/: Notation.h
src/: README.md  board.cpp  board.h  game_state.cpp  game_state.h  main.cpp  move.cpp  move.h  move_generator.cpp  move_generator.h
src/ai/: ChessAI.cpp  Evaluator.cpp  TranspositionTable.cpp  ZobristHash.cpp
src/app/: main.cpp
src/board/: Board.cpp
src/game/: GameState.cpp
src/model/: Move.cpp
src/mqtt/: main_mqtt.cpp  mqtt_client.cpp
src/rules/: Attack.cpp  Castling.cpp  MoveExec.cpp  MoveGenerator.cpp  MoveValid.cpp  MoveValid_debug.cpp  MoveValid_fixed.cpp
